# Nectar-X-Studio

./: .gitignore  Nectar-X-Client.py  Nectar-X-Studio.py  README.md  app.py  backup  nect-hun4.py  requirements.txt
INFO-Manifest/: FutureEnhancments.md  LLM ENGINE.xmind
Nectar-X-Client/: Nectar-X-Client.py
Nectar-X-Client/Nectar-X-ClientAgent/Nectar-X-StudioDownload_Agent/: Agent(NectarDownloader).py
Nectar-X-Client/Utils/Nectar-X-Engine/: MAIN.py
Nectar-X-Studio/: LICENSE  MANIFEST.in  README.md  pyproject.toml
Nectar-X-Studio/hooks/: llama_cpp.py
Nectar-X-Studio/src/: main.py
Nectar-X-Studio/src/scripts/: broadcast.py  chat.py  downloader.py  landing.py  leftsidebar.py  plugin.py  ragengine.py  rightpanel.py  updater.py  webrag.py
Nectar-X-Studio/src/scripts/Engine/: main.py
Nectar-X-Studio/src/scripts/Engine/Logic_Unit/: main.py
Nectar-X-Studio/src/scripts/Engine/Logic_Unit/Logic_Engine/: main.py
Nectar-X-Studio/src/scripts/Engine/Logic_Unit/Unit_1/: main.py
Nectar-X-Studio/src/scripts/Engine/Logic_Unit/Unit_2/: main.py
Nectar-X-Studio/src/scripts/SYS_Config/: Config.py
Nectar-X-Studio/src/scripts/SYS_PROMPTS/: Install-Commands  requirements.txt  sys_msgs.py
Nectar-X-Studio/src/scripts/components/: Card.py
Nectar-X-Studio/src/scripts/components/GoogleAuth/: GoogleAuthHelper.py
Nectar-X-Studio/src/scripts/components/Service/: find_free_port.py  find_icon.py  find_menu.py  get_llm_hardware_recommendation.py  get_local_ip.py
Nectar-X-Studio/src/scripts/components/Utility/: send_to_AlphaLLM.py  write_to_log.py
Nectar-X-Studio/src/scripts/components/WidgetBased/: AnimatedDot.py  Inform.py  Notify.py  PersistentTooltip.py  SearchLineEdit.py  WatermarkedBackground.py  WatermarkedDeveloper.py
Nectar-X-Studio/src/scripts/components/Worker/: ImageLoader.py
Nectar-X-Studio/src/scripts/components/Worker/Threads/: StreamClient.py  UpdatorThreads.py
Nectar_X_Studio-Main/: __MAIN-I__.py
Nectar_X_Studio-Main/oauth/: client_secret.json
Production/: Nectar-X-Client.reg  Nectar-X-Studio.reg  postinstall.txt  preinstall.txt
Production/Installer package/: Nectar-X-Client.iss  Nectar-X-Studio.iss
background/: desktop.ini
(+1 files in other folders)
